--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-.dll
-.ogg
-.mp3
-.resource
+.dll filter=lfs diff=lfs merge=lfs -text
+.ogg filter=lfs diff=lfs merge=lfs -text
+.mp3 filter=lfs diff=lfs merge=lfs -text
+.resource filter=lfs diff=lfs merge=lfs -text
