--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.ogg filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.resource filter=lfs diff=lfs merge=lfs -text
+*resS filter=lfs diff=lfs merge=lfs -text
